Second Commit By Sajid and Chintan

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,6 +13,13 @@
         android:hint="Enter Username"
         />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/e2"
+        android:hint="Enter Username"
+        />
+
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
